# py-knn-search

./: README.md  requirements.txt  setup.cfg
release/: py_knn-0.0.1-py3-none-any.whl  py_knn-0.0.2-py3-none-any.whl  py_knn-0.0.3-py3-none-any.whl  py_knn-0.0.4-py3-none-any.whl  py_knn-0.0.5-py3-none-any.whl  py_knn-0.1.0-py3-none-any.whl  py_knn-0.1.1-py3-none-any.whl  py_knn-0.1.2-py3-none-any.whl  py_knn-0.1.3-py3-none-any.whl
src/pyknn/: __init__.py  embeds.py  index.py  knn.py  persistence.py
tests/: conftest.py  test_framework.py  test_index_backend.py  test_persistence.py
