[metadata]
name = py-knn
version = 0.0.4

[options]
package_dir=
    =src
packages=find:
install_requires =
    nltk
    numpy
    py-profile @ https://github.com/juancavallotti/py-profile/raw/main/release/py_profile-0.0.1-py3-none-any.whl

[options.packages.find]
where=src

[tool:pytest]
pythonpath="src/"
testpaths=
    tests